# agents-course

./: pyproject.toml
notebooks/unit1/: dummy_agent_library.ipynb
notebooks/unit2/llama-index/: usage.py
notebooks/unit2/smolagents/: code_agents.ipynb
