[project]
name = "agents-course"
version = "0.1.0"
description = ""
authors = [
    {name = "David Tateyama",email = "dtateyama@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub (>=0.32.0,<0.33.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry]
packages = [{include = "agents_course", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
