[project]
name = "agents-course"
version = "0.1.0"
description = ""
authors = [
    {name = "David Tateyama",email = "dtateyama@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "huggingface-hub (>=0.32.0,<0.33.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "smolagents[litellm] (>=1.18.0,<2.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "opentelemetry-sdk (>=1.33.1,<2.0.0)",
    "opentelemetry-exporter-otlp (>=1.33.1,<2.0.0)",
    "openinference-instrumentation-smolagents (>=0.1.11,<0.2.0)",
    "duckduckgo-search (>=8.0.2,<9.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "markdownify (>=0.11.0,<1.0.0)",
    "helium (>=5.1.1,<6.0.0)",
    "selenium (>=4.33.0,<5.0.0)",
    "pillow (>=10.0.0,<11.0.0)",
    "llama-index-llms-huggingface-api (>=0.5.0,<0.6.0)",
    "llama-index-embeddings-huggingface (>=0.5.4,<0.6.0)",
    "llama-index-vector-stores-chroma (>=0.4.2,<0.5.0)",
    "llama-index-tools-google (>=0.3.1,<0.4.0)",
    "llama-index-tools-mcp (>=0.2.5,<0.3.0)",
    "llama-index-utils-workflow (>=0.3.3,<0.4.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "langchain-openai (>=0.3.23,<0.4.0)",
    "langfuse (>=3.0.1,<4.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-core (>=0.3.65,<0.4.0)"
]

[project.optional-dependencies]
telemetry = [
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "openinference-instrumentation-smolagents"
]

[tool.poetry]
packages = [{include = "agents_course", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
